# whittaker_smoother

./: Cargo.toml  README.md  shell.nix
src/: lib.rs  lines.rs  series.rs  whittaker_henderson_smoother.rs
